# rag_fake_news

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_rag-fake-news-prod.yml
data/abd4dc34-b1bc-4f74-a41b-12410c4171d0/: index_metadata.pickle
notebooks/: data_preprocesing.ipynb  streamlit_app.py  test_cleaning.py  test_embeddings.py
src/embeddings/: __init__.py  chromadb_manager.py  embed_upsert_normalize.py  embedder.py  open_client.py
src/evaluation/: __init__.py  evaluate.py
src/interface/: cli.py  streamlit_app.py
src/preprocessing/: __init__.py  chunk_text.py  clean_text.py
src/rag/: __init__.py  generator.py  prompt_builder.py  retriever.py
tests/: test_embeddings.py  test_generation.py  test_preprocessing.py
