[project]
name = "rag_fake-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.2.1",
    "jupyter>=1.1.1",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "streamlit>=1.50.0",
]
