[project]
name = "rag_fake-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.2.1",
    "fastapi>=0.120.2",
    "jupyter>=1.1.1",
    "learn>=1.0.0",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "sci-kit>=0.1.0",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "streamlit>=1.50.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]
